# elastictoolkit-py

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: global-pypi-release.yml  test-pypi-release.yml
docs/: 01_Introduction.ipynb  02_CoreConcepts.ipynb  03_BasicQueries.ipynb  04_DirectiveEngines.ipynb  05_ValueMapping.ipynb  06_BooleanLogic.ipynb  07_CustomDirectives.ipynb  08_FunctionScore.ipynb  09_CustomScoreFunctions.ipynb  10_ExampleUsecaseEcommerce.ipynb  README.md
elastictoolkit/: __init__.py  exceptions.py
elastictoolkit/adapters/: __init__.py  baseelasticsearchadapter.py  elasticsearch5adapter.py  elasticsearch8adapter.py  exceptions.py
elastictoolkit/constants/: __init__.py  client.py
elastictoolkit/indexes/: __init__.py  baseindex.py  elasticsearch5index.py  elasticsearch8index.py  exceptions.py
elastictoolkit/queryutils/: consts.py  types.py
elastictoolkit/queryutils/builder/: __init__.py  base.py  booldirective.py  custommatchdirective.py  customscorefunctiondirective.py  directiveengine.py  directivevaluemapper.py  functionscoreengine.py  matchdirective.py  matchdirectivebuilder.py  scorefunctiondirective.py  scorefunctiondirectivebuilder.py
elastictoolkit/utils/: singleton.py
tests/: __init__.py
tests/queryutils/: __init__.py
tests/queryutils/builder/: __init__.py  basetestcase.py  test_customdirective.py  test_directiveengine.py  test_functionscoreengine.py  test_matchdirective.py  test_valueparser.py
(+4 files in other folders)
