[bumpversion]
current_version = 0.4.0
commit = True
tag = True
parse = ^
	(?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)
	(\.(?P<prekind>a|alpha|b|beta|d|dev|rc)
	(?P<pre>\d+)  # pre-release version num
	)?
serialize = 
	{major}.{minor}.{patch}.{prekind}{pre}
	{major}.{minor}.{patch}

[bumpversion:part:prekind]
optional_value = _
values = 
	_
	dev
	d
	alpha
	a
	beta
	b
	rc

[isort]
profile = black

[metadata]
description = A Python based DSL for building and managing Elasticsearch queries
long_description = file: README.md
long_description_content_type = text/markdown

[bumpversion:file:setup.cfg]
search = current_version = {current_version}
replace = current_version = {new_version}

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[bumpversion:file:elastictoolkit/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bdist_wheel]
python-tag = py3
